add docker file

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,12 @@
-name = "go-seller-service"
+name = "go-echo-bun-crud-service"
 secret-key= "0"
 host = ""
-port = "1326"
+port = "3000"
 version = "0.3"
 [database]
 dbhost = "localhost"
 dbuser = "postgres"
 dbpass = "postgres"
 dbport = "5432"
-dbname = "postgres"
-schema = "sales_practice"
+dbname = "test_db"
+schema = "test"
