--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,10 @@ services:
       - POSTGRES_DB=test_db
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+      # copy the sql script to create tables
+      - ./migrations/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      # copy the sql script to fill tables
+      - ./migrations/fill_tables.sql:/docker-entrypoint-initdb.d/fill_tables.sql
     # networks:
     #   - web_api
 
